@@ -9,20 +9,17 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class InMemoryRestaurantRepositoryTest {
     private InMemoryRestaurantRepository repository;
-    private RestaurantDataAccess mockDataAccess;
 
     @BeforeEach
     void setUp() {
         // Mock RestaurantDataAccess to avoid actual file operations
-        mockDataAccess = new RestaurantDataAccess() {
+        RestaurantDataAccess mockDataAccess = new RestaurantDataAccess() {
             private final List<Restaurant> restaurants = new ArrayList<>();
 
             @Override
@@ -46,7 +43,7 @@ public class InMemoryRestaurantRepositoryTest {
 
     @Test
     void testAddRestaurant() {
-        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, Arrays.asList(new Review("1", "Author1", "Great food!", false)),null);
+        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, List.of(new Review("1", "Author1", "Great food!", false)),null);
         boolean added = repository.add(restaurant);
         assertTrue(added, "Restaurant should be added successfully");
         assertEquals(1, repository.getAll().size(), "There should be 1 restaurant in the repository");
@@ -55,7 +52,7 @@ public class InMemoryRestaurantRepositoryTest {
 
     @Test
     void testAddDuplicateRestaurant() {
-        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, Arrays.asList(new Review("1", "Author1", "Great food!", false)),null);
+        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, List.of(new Review("1", "Author1", "Great food!", false)),null);
         repository.add(restaurant);
         boolean added = repository.add(restaurant);
         assertFalse(added, "Adding a restaurant with an existing ID should fail");
@@ -63,10 +60,10 @@ public class InMemoryRestaurantRepositoryTest {
 
     @Test
     void testUpdateRestaurant() {
-        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, Arrays.asList(new Review("1", "Author1", "Great food!", false)),null);
+        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, List.of(new Review("1", "Author1", "Great food!", false)),null);
         repository.add(restaurant);
 
-        Restaurant updatedRestaurant = new Restaurant("1", "Updated Restaurant", new Location(1, 1), "New Address", null, 0, null, Arrays.asList(new Review("1", "Author1", "Great food!", false)),null);
+        Restaurant updatedRestaurant = new Restaurant("1", "Updated Restaurant", new Location(1, 1), "New Address", null, 0, null, List.of(new Review("1", "Author1", "Great food!", false)),null);
         boolean updated = repository.update(updatedRestaurant);
         assertTrue(updated, "Restaurant should be updated successfully");
 
@@ -78,7 +75,7 @@ public class InMemoryRestaurantRepositoryTest {
 
     @Test
     void testDeleteById() {
-        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, Arrays.asList(new Review("1", "Author1", "Great food!", false)),null);
+        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, List.of(new Review("1", "Author1", "Great food!", false)),null);
         repository.add(restaurant);
         boolean deleted = repository.deleteById("1");
         assertTrue(deleted, "Restaurant should be deleted successfully");
@@ -87,7 +84,7 @@ public class InMemoryRestaurantRepositoryTest {
 
     @Test
     void testDeleteByName() {
-        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, Arrays.asList(new Review("1", "Author1", "Great food!", false)),null);
+        Restaurant restaurant = new Restaurant("1", "Test Restaurant", new Location(0, 0), "Address", null, 0, null, List.of(new Review("1", "Author1", "Great food!", false)),null);
         repository.add(restaurant);
         boolean deleted = repository.deleteByName("Test Restaurant");
         assertTrue(deleted, "Restaurant should be deleted successfully by name");
